@@ -262,8 +262,8 @@ global {
 
     # The default metadata format that commands should use - "lvm1" or "lvm2".
     # The command line override is -M1 or -M2.
-    # Defaults to "lvm1" if compiled in, else "lvm2".
-    # format = "lvm1"
+    # Defaults to "lvm2".
+    # format = "lvm2"
 
     # Location of proc filesystem
     proc = "/proc"
